--- a/index.html
+++ b/index.html
@@ -4,95 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylesheet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Student Name - Frontend Developer</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="logo">Student Name</a>
+        <a href="index.html" class="logo">Student Name</a>
         <div class="nav">
-            <a href="index.html" class="nav_item">Portfolio</a>
+            <a href="index.html" class="nav_item active">Portfolio</a>
             <a href="contact.html" class="nav_item">Contact</a>
-            <a href="#" class="nav_item">github</a>
-            <a href="#" class="nav_item">linkedin</a>
+            <a href="https://github.com/debthebuilder" target="_blank" class="nav_item"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="nav_item"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </nav> 
     <main class="portfolio">
-        <div class="portfolio_item">
-            <a href="#" class="portfolio_url">
-                <img src="#" alt="Title of Your Project" class="porfolio_img" />
-            </a>
+        <div class="portfolio_item" id="sandraCami">
             <div class="hover_content">
-                <h2 class="title">Title of the Project</h2>
-                <ul class="skills">
-                    <li class="skill_item">HTML</li>
-                    <li class="skil_item">CSS</li>
-                </ul>
+                <a href="https://debthebuilder.github.io/sandra-cami-squarespace-template-clone/" target="_blank" class="portfolio_url">
+                    <h2 class="title">Sandra Cami</h2>
+                    <ul class="skills">
+                        <li class="skill_item">HTML</li>
+                        <li class="skil_item">CSS</li>
+                    </ul>
+                </a>
             </div>
         </div>
-        <div class="portfolio_item">
-            <a href="#" class="portfolio_url">
-                <img src="#" alt="Title of Your Project" class="porfolio_img" />
-            </a>
+        <div class="portfolio_item" id="ronald">
             <div class="hover_content">
-                <h2 class="title">Title of the Project</h2>
-                <ul class="skills">
-                    <li class="skill_item">HTML</li>
-                    <li class="skil_item">CSS</li>
-                </ul>
+                <a href="https://debthebuilder.github.io/ronald-portfolio-webflow-clone-/" class="portfolio_url">
+                    <h2 class="title">Ronald Boyd</h2>
+                    <ul class="skills">
+                        <li class="skill_item">HTML</li>
+                        <li class="skil_item">CSS</li>
+                    </ul>
+                </a>
+                
             </div>
         </div>
-        <div class="portfolio_item">
-            <a href="#" class="portfolio_url">
-                <img src="#" alt="Title of Your Project" class="porfolio_img" />
-            </a>
-            <div class="hover_content">
-                <h2 class="title">Title of the Project</h2>
-                <ul class="skills">
-                    <li class="skill_item">HTML</li>
-                    <li class="skil_item">CSS</li>
-                </ul>
-            </div>
-        </div>
-        <div class="portfolio_item">
-            <a href="#" class="portfolio_url">
-                <img src="#" alt="Title of Your Project" class="porfolio_img" />
-            </a>
-            <div class="hover_content">
-                <h2 class="title">Title of the Project</h2>
-                <ul class="skills">
-                    <li class="skill_item">HTML</li>
-                    <li class="skil_item">CSS</li>
-                </ul>
-            </div>
-        </div>
-        <div class="portfolio_item">
-            <a href="#" class="portfolio_url">
-                <img src="#" alt="Title of Your Project" class="porfolio_img" />
-            </a>
-            <div class="hover_content">
-                <h2 class="title">Title of the Project</h2>
-                <ul class="skills">
-                    <li class="skill_item">HTML</li>
-                    <li class="skil_item">CSS</li>
-                </ul>
-            </div>
-        </div>
-        <div class="portfolio_item">
-            <a href="#" class="portfolio_url">
-                <img src="#" alt="Title of Your Project" class="porfolio_img" />
-            </a>
-            <div class="hover_content">
-                <h2 class="title">Title of the Project</h2>
-                <ul class="skills">
-                    <li class="skill_item">HTML</li>
-                    <li class="skil_item">CSS</li>
-                </ul>
-            </div>
-        </div>
-        
     </main>
-    <footer>
-        <p>Made with &hearts;</p>
-    </footer>
+    <footer>Made with &hearts;</footer>
 </body>
 </html>
